docs: sync all documentation with FASE 14 codebase state
- Update phase references: FASE 10/13 -> FASE 14 across 18 docs
- Fix Next.js version: 14 -> 16 in all active documentation
- Fix JVM flags: confirm ZGC in CLAUDE.md (was already correct)
- Remove user-service references from active docs (5 files)
- Replace user-service with client-service in Snyk table
- Update container count: 18 -> 11 (actual healthy count)
- Update copilot agents count: 8 -> 4 (actual count)
- Add FASE 11-14 milestones to ROADMAP.md
- Update dates to 14 Feb 2026 across all docs
- Add Jib build info to ARCHITECTURE.md
- Clean deprecated service references in OPS_README.md

Files modified: 19 documentation files across docs/, .github/, frontend/